--- a/new.html
+++ b/new.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-
+<div width="50%">
 <h1>Khal Investor Page</h1>
 <hr/>
 
@@ -262,7 +262,7 @@ They are not designed only for cooking. A chef cannot submit his Instagram profi
   
 </table>
 
-
+	</div>
 
 </body>
 </html>
