--- a/new.html
+++ b/new.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<div width="50%">
+
 <h1>Khal Investor Page</h1>
 <hr/>
 
@@ -13,7 +13,9 @@
 <iframe width="420" height="315"
 src="https://www.youtube.com/embed/2_btN9xTNzQ">
 </iframe>
-<p><i>Khal.com is a platform where users can make profiles and show their cooking skills. It is both a social network and a professional network for cooking enthusiasts</i><p/>
+	<p><i>Khal.com is a platform where users can make profiles and show their</br> 
+	cooking skills. It is both a social network and a professional </br> 
+	network for cooking enthusiasts</i><p/>
 
 <p>Why you may want to invest in us...<p/>
 
@@ -130,7 +132,7 @@ src="https://www.youtube.com/embed/2_btN9xTNzQ">
 <hr/>
   <h1>People Love to cook and take pictures and videos of their cooking</h1>
 
-<img src="https://ucarecdn.com/ef4aee01-a730-4168-b8b4-e0cecfe4f3d3/-/preview/" width="100%"/>
+<img src="https://ucarecdn.com/ef4aee01-a730-4168-b8b4-e0cecfe4f3d3/-/preview/" width="50%"/>
 
 <p><i>You can see Facebook, Instagram, Twitter,  every social network has people showing their cooking skills </i></p>
 
@@ -138,7 +140,7 @@ src="https://www.youtube.com/embed/2_btN9xTNzQ">
 
 <big>There is currently no place dedicated to show your cooking skills</big>
 
-<img src="https://ucarecdn.com/2f35f31f-ce36-4ce4-ad5b-965d1b29fefd/-/preview/" width="50%"/>
+<img src="https://ucarecdn.com/2f35f31f-ce36-4ce4-ad5b-965d1b29fefd/-/preview/" width="50%" align="left"/>
 
 <h1>Solution: Khal.com, A dedicated cooking profile</h1>
 <img src="https://ucarecdn.com/81adf088-f618-428b-8b2c-12bca8ca20fb/-/preview/" width="50%"/><br/><br/>
@@ -262,7 +264,7 @@ They are not designed only for cooking. A chef cannot submit his Instagram profi
   
 </table>
 
-	</div>
+	
 
 </body>
 </html>
