--- a/new.html
+++ b/new.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title></title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Bootstrap 4 Website Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <style>
+  .fakeimg {
+    height: 200px;
+    background: #aaa;
+  }
+  </style>
 </head>
 <body>
 
-<h1>Khal Investor Page</h1>
-<hr/>
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <h1>Khal Investor Page</h1>
+</div>
+
+
+
+<div class="container" style="margin-top:30px">
+  <div class="row">
+
+    <div class="col-sm-8">
+     
 
 <h1>Khal: Show the world your cooking skills</h1>
 <iframe width="420" height="315"
 src="https://www.youtube.com/embed/2_btN9xTNzQ">
 </iframe>
-	<p><i>Khal.com is a platform where users can make profiles and show their</br> 
-	cooking skills. It is both a social network and a professional </br> 
-	network for cooking enthusiasts</i><p/>
+<p><i>Khal.com is a platform where users can make profiles and show their cooking skills. It is both a social network and a professional network for cooking enthusiasts</i><p/>
 
 <p>Why you may want to invest in us...<p/>
 
@@ -33,7 +52,7 @@ src="https://www.youtube.com/embed/2_btN9xTNzQ">
 <strong>Our team</strong><br/>
 <small>AND OUR MAJOR ACCOMPLISHMENTS<small/><br/><br/>
 
-<table style="width:75%">
+<table style="width:100%">
      
    <tr>
     <td><img src="https://dfon51l7zffjj.cloudfront.net/uploads/company_role/custom_photo/1025388/square_cropped_Samir_picture.jpg" width="100px" align=”left” style="margin: 0px 10px 0px 0px; border-radius: 50%;" /></td>
@@ -132,7 +151,7 @@ src="https://www.youtube.com/embed/2_btN9xTNzQ">
 <hr/>
   <h1>People Love to cook and take pictures and videos of their cooking</h1>
 
-<img src="https://ucarecdn.com/ef4aee01-a730-4168-b8b4-e0cecfe4f3d3/-/preview/" width="50%"/>
+<img src="https://ucarecdn.com/ef4aee01-a730-4168-b8b4-e0cecfe4f3d3/-/preview/" width="100%"/>
 
 <p><i>You can see Facebook, Instagram, Twitter,  every social network has people showing their cooking skills </i></p>
 
@@ -140,12 +159,12 @@ src="https://www.youtube.com/embed/2_btN9xTNzQ">
 
 <big>There is currently no place dedicated to show your cooking skills</big>
 
-<img src="https://ucarecdn.com/2f35f31f-ce36-4ce4-ad5b-965d1b29fefd/-/preview/" width="50%" align="left"/>
+<img src="https://ucarecdn.com/2f35f31f-ce36-4ce4-ad5b-965d1b29fefd/-/preview/" width="100%"/>
 
 <h1>Solution: Khal.com, A dedicated cooking profile</h1>
-<img src="https://ucarecdn.com/81adf088-f618-428b-8b2c-12bca8ca20fb/-/preview/" width="50%"/><br/><br/>
-<img src="https://ucarecdn.com/ac9b9c16-fa38-4945-b7fd-348bd582b960/-/preview/" width="50%"/><br/><br/>
-<img src="https://ucarecdn.com/2fcc7a96-24bc-407f-aae2-90f5c04b4274/-/preview/" width="50%"/>
+<img src="https://ucarecdn.com/81adf088-f618-428b-8b2c-12bca8ca20fb/-/preview/" width="100%"/><br/><br/>
+<img src="https://ucarecdn.com/ac9b9c16-fa38-4945-b7fd-348bd582b960/-/preview/" width="100%"/><br/><br/>
+<img src="https://ucarecdn.com/2fcc7a96-24bc-407f-aae2-90f5c04b4274/-/preview/" width="100%"/>
 
 It also gives other information like
 <ul>
@@ -186,25 +205,25 @@ src="https://www.youtube.com/embed/4uvjdv7_bNg">
 </iframe><br/><br/>
 
 <h1>About Samir Tendulkar</h1>
-<img src="https://ucarecdn.com/9e73481b-b967-4b26-825a-a8466c8a1dea/-/preview/" width="50%"/>
+<img src="https://ucarecdn.com/9e73481b-b967-4b26-825a-a8466c8a1dea/-/preview/" width="100%"/>
 <p><i>Giving a talk on programming in the Microsoft Building New York</i></p><br/><br/>
 
-<img src="https://ucarecdn.com/4fc8d0be-ec92-4787-897a-dfb1920b5eff/-/preview/" width="50%"/><br/><br/>
+<img src="https://ucarecdn.com/4fc8d0be-ec92-4787-897a-dfb1920b5eff/-/preview/" width="100%"/><br/><br/>
 
 <h2>Past Success</h2>
 <img src="https://ucarecdn.com/58a8bbfc-b0b7-4878-a2e0-ecd1941676a2/-/preview/" width="100%"/><br/>
 Samir Tendulkar owned and operated a e-commerce business from 2012 to 2016 which managed more than 250,000 items it grew from 9.6MM in annual sales in 2016.
 <br/>
 <h1>COVID-19</h1>
-<img src="https://ucarecdn.com/ffc5f279-3591-49ea-8242-263e5d2d5a8e/-/preview/" width="50%"/><br/>
+<img src="https://ucarecdn.com/ffc5f279-3591-49ea-8242-263e5d2d5a8e/-/preview/" width="100%"/><br/>
 Covid-19 has made working from home a new normal. This will see a lot more people cooking at home. This presents a tremendous growth opportunity 
 <h1>Use of Funds</h1>
-<img src="https://ucarecdn.com/459fe672-ef6d-4cf3-bfe2-38376a197965/-/preview/" width="50%"/><br/><br/>
+<img src="https://ucarecdn.com/459fe672-ef6d-4cf3-bfe2-38376a197965/-/preview/" width="100%"/><br/><br/>
 
 <h1>Join us. Let's make something big together</h1>
-<img src="https://ucarecdn.com/72456bcf-0776-451c-90bf-21d08c694619/-/preview/" width="50%"/><br/><br/>
+<img src="https://ucarecdn.com/72456bcf-0776-451c-90bf-21d08c694619/-/preview/" width="100%"/><br/><br/>
 
-<img src="https://ucarecdn.com/67603ae4-1e50-46dc-9a94-b612c2e0c81e/-/preview/" width="50%"/><br/>
+<img src="https://ucarecdn.com/67603ae4-1e50-46dc-9a94-b612c2e0c81e/-/preview/" width="100%"/><br/>
 
 <hr/>
 
@@ -264,10 +283,17 @@ They are not designed only for cooking. A chef cannot submit his Instagram profi
   
 </table>
 
-	
+
+
+
+
+    </div>
+  </div>
+</div>
+
+<div class="jumbotron text-center" style="margin-bottom:0">
+  <p>Footer</p>
+</div>
 
 </body>
 </html>
-
-
-
