--- a/new.html
+++ b/new.html
@@ -50,7 +50,7 @@ src="https://www.youtube.com/embed/2_btN9xTNzQ">
 </ol>
 
 <strong>Our team</strong><br/>
-<small>AND OUR MAJOR ACCOMPLISHMENTS<small/><br/><br/>
+<small>AND OUR MAJOR ACCOMPLISHMENTS</small><br/><br/>
 
 <table style="width:100%">
      
