--- a/new.html
+++ b/new.html
@@ -170,7 +170,7 @@ It also gives other information like
 	<li>Other's recipe you made</li>
     <li>Other's recipe you want to make</li>
     <li>How many followers you have</li>
-    <li>What people have to say about you</li>
+    <li>What people have to say about your cooking</li>
     <li>and much more..</li>
 </ul>
 
