--- a/new.html
+++ b/new.html
@@ -167,7 +167,7 @@ src="https://www.youtube.com/embed/2_btN9xTNzQ">
 
 It also gives other information like
 <ul>
-	<li>Other's recipe you made</li>
+    <li>Other's recipe you made</li>
     <li>Other's recipe you want to make</li>
     <li>How many followers you have</li>
     <li>What people have to say about your cooking</li>
@@ -254,7 +254,7 @@ They are not designed only for cooking. A chef cannot submit his Instagram profi
 <p>We have 2 plans to monetize
 <ol>
     <li>Advertising</li>
-    <li>asting: Post covid-19. We will start a tasting feature where users can sell tastings of their recipes</li>
+    <li>Tasting: Post covid-19. We will start a tasting feature where users can sell tastings of their recipes</li>
 
 </ol>
 
