--- a/new.html
+++ b/new.html
@@ -27,10 +27,10 @@
 <div class="container" style="margin-top:30px">
   <div class="row">
 
-    <div class="col-sm-6">
+    <div class="col-sm-8">
      
 <h3>Khal: Show the world your cooking skills</h3>
-<iframe width="840" height="630"
+<iframe width="100%" 
 src="https://www.youtube.com/embed/2_btN9xTNzQ">
 </iframe>
 <p><i>Khal.com is a platform where users can make profiles and show their cooking skills. It is both a social network and a professional network for cooking enthusiasts</i><p/>
@@ -176,13 +176,13 @@ It also gives other information like
 
 <h3>Applications</h3>
 
-<iframe width="820" height="630"
+<iframe width="100%" 
 src="https://www.youtube.com/embed/fEfWRsiveLc">
 </iframe><br/><br/>
 
 OR<br/><br/>
 
-<iframe width="820" height="630"
+<iframe width="100%" 
 src="https://www.youtube.com/embed/Z5JDOzpsyzA">
 </iframe><br/><br/>
 
@@ -194,12 +194,12 @@ src="https://www.youtube.com/embed/Z5JDOzpsyzA">
 And many other
 
 <h3>The Team</h3>
-<iframe width="820" height="630"
+<iframe width="100%" 
 src="https://www.youtube.com/embed/-fyrRPRtVEE">
 </iframe><br/><br/>
 
 <h3>The Dean and the Home Chef</h3>
-<iframe width="820" height="630"
+<iframe width="100%"
 src="https://www.youtube.com/embed/4uvjdv7_bNg">
 </iframe><br/><br/>
 
