--- a/new.html
+++ b/new.html
@@ -4,6 +4,23 @@
   <title>Bootstrap 4 Website Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style rel="stylesheet" >
+  .container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+</style>
+  
+  
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -30,9 +47,13 @@
     <div class="col-sm-8">
      
 <h3>Khal: Show the world your cooking skills</h3>
-<iframe width="100%" 
-src="https://www.youtube.com/embed/2_btN9xTNzQ">
-</iframe>
+
+<div class="container">
+<iframe src="https://www.youtube.com/embed/2_btN9xTNzQ"
+frameborder="0" allowfullscreen class="video"></iframe>
+</div>
+
+
 <p><i>Khal.com is a platform where users can make profiles and show their cooking skills. It is both a social network and a professional network for cooking enthusiasts</i><p/>
 
 <p>Why you may want to invest in us...<p/>
@@ -176,15 +197,21 @@ It also gives other information like
 
 <h3>Applications</h3>
 
-<iframe width="100%" 
-src="https://www.youtube.com/embed/fEfWRsiveLc">
-</iframe><br/><br/>
+<div class="container">
+<iframe src="https://www.youtube.com/embed/fEfWRsiveLc"
+frameborder="0" allowfullscreen class="video"></iframe>
+</div><br/><br/>
+
+
 
 OR<br/><br/>
 
-<iframe width="100%" 
-src="https://www.youtube.com/embed/Z5JDOzpsyzA">
-</iframe><br/><br/>
+<div class="container">
+<iframe src="https://www.youtube.com/embed/Z5JDOzpsyzA"
+frameborder="0" allowfullscreen class="video"></iframe>
+</div><br/><br/>
+
+
 
 <ul>
     <li>Add it to your social network</li>
@@ -194,14 +221,23 @@ src="https://www.youtube.com/embed/Z5JDOzpsyzA">
 And many other
 
 <h3>The Team</h3>
-<iframe width="100%" 
-src="https://www.youtube.com/embed/-fyrRPRtVEE">
-</iframe><br/><br/>
+
+<div class="container">
+<iframe src="https://www.youtube.com/embed/-fyrRPRtVEE"
+frameborder="0" allowfullscreen class="video"></iframe>
+</div><br/><br/>
+
+
+
 
 <h3>The Dean and the Home Chef</h3>
-<iframe width="100%"
-src="https://www.youtube.com/embed/4uvjdv7_bNg">
-</iframe><br/><br/>
+
+<div class="container">
+<iframe src="https://www.youtube.com/embed/4uvjdv7_bNg"
+frameborder="0" allowfullscreen class="video"></iframe>
+</div><br/><br/>
+
+
 
 <h3>About Samir Tendulkar</h3>
 <img src="https://ucarecdn.com/9e73481b-b967-4b26-825a-a8466c8a1dea/-/preview/" width="100%"/>
