--- a/new.html
+++ b/new.html
@@ -179,7 +179,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
 
 <big>There is currently no place dedicated to show your cooking skills</big>
 
-<img src="https://ucarecdn.com/2f35f31f-ce36-4ce4-ad5b-965d1b29fefd/-/preview/" width="100%"/>
+<img src="https://ucarecdn.com/2f35f31f-ce36-4ce4-ad5b-965d1b29fefd/-/preview/" width="100%"/><br/><br/>
 
 <h3>Solution: Khal.com, A dedicated cooking profile</h3>
 <img src="https://ucarecdn.com/81adf088-f618-428b-8b2c-12bca8ca20fb/-/preview/" width="100%"/><br/><br/>
@@ -193,7 +193,7 @@ It also gives other information like
     <li>How many followers you have</li>
     <li>What people have to say about your cooking</li>
     <li>and much more..</li>
-</ul>
+</ul><br/><br/>
 
 <h3>Applications</h3>
 
