--- a/new.html
+++ b/new.html
@@ -60,7 +60,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
 
 <ol>
   <li>There is no cooking community online. We are a social network and professional network for cooking🍳</li><br/>  
-  <li>👨‍🍳Professional Chefs can add Khal profile to their bio when they apply for a job to show their cooking skills.</li><br/>
+  <li>👨‍🍳Professional Chefs can add their Khal profile to their bio when they apply for a job.</li><br/>
   <li>Cooking enthusiasts 😋could add their Khal profile to their Social Network / Dating pages</li><br/>
   <li>🏆The best team. made up of top culinary experts, top media experts and top finance experts.  </li><br/>
   <li>📈 Experienced founder who has taken a company from 0 to 16 Million in sales in 4 years</li><br/>
