--- a/new.html
+++ b/new.html
@@ -60,7 +60,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
 
 <ol>
   <li>There is no cooking community online. We are a social network and professional network for cooking🍳</li><br/>  
-  <li>👨‍🍳Professional Chefs can add their Khal profile to their bio when they apply for a job.</li><br/>
+  <li>👨‍🍳Professional Chefs can add Khal profile to their bio when they apply for a job to show their cooking skills.</li><br/>
   <li>Cooking enthusiasts 😋could add their Khal profile to their Social Network / Dating pages</li><br/>
   <li>🏆The best team. made up of top culinary experts, top media experts and top finance experts.  </li><br/>
   <li>📈 Experienced founder who has taken a company from 0 to 16 Million in sales in 4 years</li><br/>
@@ -155,7 +155,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
   </tr>
   
   <tr>
-    <td><img src="https://dfon51l7zffjj.cloudfront.net/uploads/company_role/custom_photo/1081127/square_cropped_IMG-20200810-WA0000.jpg" width="100px" align=”left” style="margin: 0px 10px 0px 0px; border-radius: 50%;" /></td>
+    <td><img src="https://dfon51l7zffjj.cloudfront.net/uploads/company_role/custom_photo/1081127/square_cropped_IMG-20200806-WA0006.jpg" width="100px" align=”left” style="margin: 0px 10px 0px 0px; border-radius: 50%;" /></td>
     <td><strong>Ahmed Teirelbar</strong><br/>
     <small>Lead Developer</small>
     <ul>
@@ -179,7 +179,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
 
 <big>There is currently no place dedicated to show your cooking skills</big>
 
-<img src="https://ucarecdn.com/2f35f31f-ce36-4ce4-ad5b-965d1b29fefd/-/preview/" width="100%"/><br/><br/>
+<img src="https://ucarecdn.com/2f35f31f-ce36-4ce4-ad5b-965d1b29fefd/-/preview/" width="100%"/>
 
 <h3>Solution: Khal.com, A dedicated cooking profile</h3>
 <img src="https://ucarecdn.com/81adf088-f618-428b-8b2c-12bca8ca20fb/-/preview/" width="100%"/><br/><br/>
@@ -193,7 +193,7 @@ It also gives other information like
     <li>How many followers you have</li>
     <li>What people have to say about your cooking</li>
     <li>and much more..</li>
-</ul><br/><br/>
+</ul>
 
 <h3>Applications</h3>
 
@@ -206,10 +206,8 @@ frameborder="0" allowfullscreen class="video"></iframe>
 
 OR<br/><br/>
 
-<div class="container">
-<iframe src="https://www.youtube.com/embed/Z5JDOzpsyzA"
-frameborder="0" allowfullscreen class="video"></iframe>
-</div><br/><br/>
+<img src="https://ucarecdn.com/134e1a52-1f8d-4df9-af11-dfdc428c169e/-/preview/" width="100%"/><br/
+
 
 
 
@@ -256,7 +254,7 @@ Covid-19 has made working from home a new normal. This will see a lot more peopl
 <img src="https://ucarecdn.com/459fe672-ef6d-4cf3-bfe2-38376a197965/-/preview/" width="100%"/><br/><br/>
 
 <h3>Join us. Let's make something big together</h3>
-<img src="https://ucarecdn.com/72456bcf-0776-451c-90bf-21d08c694619/-/preview/" width="100%"/><br/><br/>
+<img src="https://ucarecdn.com/b272c1bf-c48e-4cdd-8b04-4d4f13a77ec7/-/preview/" width="100%"/><br/><br/>
 
 <img src="https://ucarecdn.com/67603ae4-1e50-46dc-9a94-b612c2e0c81e/-/preview/" width="100%"/><br/>
 
@@ -325,7 +323,6 @@ They are not designed only for cooking. A chef cannot submit his Instagram profi
     </div>
   </div>
 </div>
-
 
 
 </body>
