--- a/new.html
+++ b/new.html
@@ -59,14 +59,14 @@ frameborder="0" allowfullscreen class="video"></iframe>
 <p>Why you may want to invest in us...<p/>
 
 <ol>
-  <li>There is no cooking community online. We are a social network and professional network for cooking🍳</li><br/>  
-  <li>👨‍🍳Professional Chefs can add Khal profile to their bio when they apply for a job to show their cooking skills.</li><br/>
-  <li>Cooking enthusiasts 😋could add their Khal profile to their Social Network / Dating pages</li><br/>
-  <li>🏆The best team. made up of top culinary experts, top media experts and top finance experts.  </li><br/>
-  <li>📈 Experienced founder who has taken a company from 0 to 16 Million in sales in 4 years</li><br/>
-  <li>Advertisers who want to target people who cook will ❤️love this place</li><br/>
-  <li>It has a business account feature for Organizations 🏦& Restaurants🍽️. Cooking institutes can join too</li><br/>
-  <li>The webapp is up and running. You can check it at Khal.com. The CEO is also the CTO.🤓  </li><br/>
+  <li>Cooking world needs an online community. We are a social network & professional network for cooks.🍳</li><br/>  
+  <li>👨‍🍳Professional Chefs can add their Khal.com profile to their bio when they apply for a job..</li><br/>
+  <li>Cooking enthusiasts 😋can add their Khal.com profile to their Social Network / Dating pages.</li><br/>
+  <li>🏆Khal.com has the best team. made up of top culinary experts, top media experts and top finance experts.</li><br/>
+  <li>📈 Khal.com's experienced founder has taken a company from 0 to $16 million in sales in 4 years.</li><br/>
+  <li>Advertisers who want to target people who cook will ❤️love Khal.com</li><br/>
+  <li>Khal.com has a business account feature for Organizations 🏦& Restaurants🍽️. Cooking institutes can join too. </li><br/>
+  <li>The web site is up and running. You can check it at Khal.com. The CEO is also the CTO.🤓  </li><br/>
 </ol>
 
 <strong>Our team</strong><br/>
@@ -81,7 +81,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
     <small>Founder CEO/CTO</small>
     
     <ul>
-    	<li>Started a e-commerce Company in 2012 & took the business from 0 to $16 Million Dollar in 4 years
+    	<li>Started a e-commerce Company in 2012 & took the business from 0 to $16 million in 4 years. 
 </li>
 	</ul>
    
@@ -179,17 +179,17 @@ frameborder="0" allowfullscreen class="video"></iframe>
 
 <big>There is currently no place dedicated to show your cooking skills</big>
 
-<img src="https://ucarecdn.com/594a1cba-82d7-4a97-b40d-5406c97c3e60/-/preview/" width="100%"/>
+<img src="https://ucarecdn.com/cab33cd9-3a5a-45b3-ae04-2c403ffd7eb3/-/preview/" width="100%"/>
 
 <h3>Solution: Khal.com, A dedicated cooking profile</h3>
-<img src="https://ucarecdn.com/81adf088-f618-428b-8b2c-12bca8ca20fb/-/preview/" width="100%"/><br/><br/>
+<img src="https://ucarecdn.com/76da06d1-96df-4bf6-908b-323c5aa07e44/-/preview/" width="100%"/><br/><br/>
 <img src="https://ucarecdn.com/ac9b9c16-fa38-4945-b7fd-348bd582b960/-/preview/" width="100%"/><br/><br/>
-<img src="https://ucarecdn.com/2fcc7a96-24bc-407f-aae2-90f5c04b4274/-/preview/" width="100%"/>
+<img src="https://ucarecdn.com/be0878e0-3fd5-4273-b6f2-33b64c109e15/-/preview/" width="100%"/>
 
 It also gives other information like
 <ul>
-    <li>Other's recipe you made</li>
-    <li>Other's recipe you want to make</li>
+    <li>Other people's recipe you made</li>
+    <li>Other people's recipe you want to make</li>
     <li>How many followers you have</li>
     <li>What people have to say about your cooking</li>
     <li>and much more..</li>
@@ -221,7 +221,7 @@ And many other
 <h3>The Team</h3>
 
 <div class="container">
-<iframe src="https://www.youtube.com/embed/-fyrRPRtVEE"
+<iframe src="https://www.youtube.com/embed/1WRdMDSHPUc"
 frameborder="0" allowfullscreen class="video"></iframe>
 </div><br/><br/>
 
@@ -251,7 +251,7 @@ Samir Tendulkar owned and operated a e-commerce business from 2012 to 2016 which
 <img src="https://ucarecdn.com/ffc5f279-3591-49ea-8242-263e5d2d5a8e/-/preview/" width="100%"/><br/>
 Covid-19 has made working from home a new normal. This will see a lot more people cooking at home. This presents a tremendous growth opportunity 
 <h3>Use of Funds</h3>
-<img src="https://ucarecdn.com/459fe672-ef6d-4cf3-bfe2-38376a197965/-/preview/" width="100%"/><br/><br/>
+<img src="https://ucarecdn.com/6c50c0c0-121e-4dec-9da1-57a36cf1e870/-/preview/" width="100%"/><br/><br/>
 
 <h3>Join us. Let's make something big together</h3>
 <img src="https://ucarecdn.com/b272c1bf-c48e-4cdd-8b04-4d4f13a77ec7/-/preview/" width="100%"/><br/><br/>
@@ -263,10 +263,10 @@ Covid-19 has made working from home a new normal. This will see a lot more peopl
 <h3>Investor Q&A </h3>
 
 <p><b>What does your company do?</b></p>
-<p>Khal.com is a place where cooking enthusiasts can show the world their cooking skills.  It is a social network and professional network for people who like cooking.</p><br/>
+<p>Khal.com is a place where cooking enthusiasts can show the world their cooking skills. It is a social network and professional network for people who like cooking.</p><br/>
 
 <p><b>Where do you want to be in 5 years?</b></p>
-<p>To be the "Go To" place for anyone who loves to cook professionally or for enjoyment</p><br/>
+<p>To be the go-to destination for anyone who loves to cook professionally or for enjoyment </p><br/>
 
 <p><b>Why did you choose this idea? Why do you care?
 </b></p>
@@ -276,27 +276,33 @@ We give them a platform to do so.</p><br/>
 
 <p><b>How far along are you? What's your biggest obstacle?
 </b></p>
-<p>The web app Khal.com is ready and launched with users and some very interesting recipes. Our biggest obstacle is to rope someone famous to the platform. </p><br/>
+<p>The web site Khal.com is ready and launched with users from all over the world and some very interesting recipes. Our biggest obstacle is to keep up with how fast things are moving for us.</p><br/>
 
 <p><b>Who competes with you? What do you understand that they don't?</b></p>
-<p>Instagram, Facebook, Reddit, twitter and other social networks are our biggest competitors. <br/>
+<p>Instagram, Facebook, Reddit, twitter and other social networks are our biggest competitors. 
+
+They are not designed specifically for cooking. A chef cannot submit his Instagram profile for a job application. Khal.com is exclusively about cooking. <br/>
 
 They are not designed only for cooking. A chef cannot submit his Instagram profile for a job application. Khal will be exclusively about cooking</p><br/>
 
 
 <p><b>How will you make money?</b></p>
-<p>We have 2 plans to monetize
+<p>Potential Revenue Streams</p>
 <ol>
-    <li>Advertising</li>
-    <li>Tasting: Post covid-19. We will start a tasting feature where users can sell tastings of their recipes</li>
-
+<li>  Advertising </li>
+<li> Culinary Job Postings </li>
+<li> Institutional Premium Membership</li>
+<li> Commission from Chef's charging for Master Class for cooking</li>
+<li> Tasting: Post covid-19. We will start a tasting feature where users can sell tastings of their recipes</li>
+<li> Targeted e-commerce (Cookware)</li>
 </ol>
 
 
 
-
 <p><b>What are the biggest risks? If you fail, what would be the reason? What has to go right for you to succeed?</b></p>
-<p>I have started a company and taken it from 0 to $16 million in annual sales in around 4 years selling in a very competitive market. I am very hardworking and will always find a work around to make things work. Eventually we might have competition. However they will need at least a year to catch on. We have the advantage of being 1st to Market. We have the need to grow big fast</p><br/>
+<p>I started a company and took it from 0 to $16 million in annual sales in around 4 years, selling in a very competitive market. I am very hardworking and will always find a workaround to make things work. <br/>
+
+ Our biggest risks are people not interested in cooking and sharing their cooking skills. People have to be interested in showing their cooking skills for us to succeed</p><br/>
 
 <table style="width:100%">
 
