--- a/new.html
+++ b/new.html
@@ -253,13 +253,16 @@ frameborder="0" allowfullscreen class="video"></iframe>
 frameborder="0" allowfullscreen class="video"></iframe>
 </div><br/><br/>
 
-
+<h3>Competition</h3>
+<img src="https://ucarecdn.com/4d914209-48b0-4107-868a-bfe28b4404ce/-/preview/" width="100%"/><br/><br/>
 
 <h3>About Samir Tendulkar</h3>
 <img src="https://ucarecdn.com/9e73481b-b967-4b26-825a-a8466c8a1dea/-/preview/" width="100%"/>
 <p><i>Giving a talk on programming in the Microsoft Building New York</i></p><br/><br/>
 
 <img src="https://ucarecdn.com/4fc8d0be-ec92-4787-897a-dfb1920b5eff/-/preview/" width="100%"/><br/><br/>
+
+
 
 <h3>Past Success</h3>
 <img src="https://ucarecdn.com/58a8bbfc-b0b7-4878-a2e0-ecd1941676a2/-/preview/" width="100%"/><br/>
