--- a/new.html
+++ b/new.html
@@ -91,7 +91,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
   <tr>
     <td><img src="https://dfon51l7zffjj.cloudfront.net/uploads/company_role/custom_photo/1065528/square_cropped_JimLedbetter-9__2_.jpg" width="100px" align=”left” style="margin: 0px 10px 0px 0px; border-radius: 50%;" /></td>
     <td><strong>James Ledbetter</strong>&nbsp &nbsp 
-    <a href="https://www.linkedin.com/in/james-ledbetter-9667312/" style="font-size:24px" class="fa">&#xf08c;</a><br/>
+    <a href="https://www.linkedin.com/in/james-ledbetter-9667312/" style="font-size:24px" class="fa">&#xf08c;</a>&nbsp<a href="https://twitter.com/jledbetter" class="fa fa-twitter"></a><br/>
     <small>Chief Marketing Officer</small>
     <ul>
     	<li>Head of Content in Sequoia Capital</li>
@@ -168,7 +168,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
   
   
    <tr>
-    <td><img src="https://d2qbf73089ujv4.cloudfront.net/uploads/company_role/custom_photo/1096827/square_cropped_Mehmet.jpg" width="100px" align=”left” style="margin: 0px 10px 0px 0px; border-radius: 50%;" /></td>
+    <td><img src="https://dfon51l7zffjj.cloudfront.net/uploads/company_role/custom_photo/1099021/square_cropped_Mehmet.jpg" width="100px" align=”left” style="margin: 0px 10px 0px 0px; border-radius: 50%;" /></td>
     <td><strong>Mehmet Yiğit Akın</strong>&nbsp &nbsp 
     <a href="https://www.linkedin.com/in/testb/" style="font-size:24px" class="fa">&#xf08c;</a><br/>
     <small>Intern</small>
