--- a/with_dividers.html
+++ b/with_dividers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 4 Website Example</title>
+  <title>Khal Investor Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style rel="stylesheet" >
@@ -264,7 +264,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
 </div><br/><br/>
 
 <img src="https://ucarecdn.com/db30ce3c-c37b-45ae-9695-16219e469481/-/preview/" width="100%"/><br/><br/>
-<img src="https://ucarecdn.com/4d914209-48b0-4107-868a-bfe28b4404ce/-/preview/" width="100%"/><br/><br/>
+<img src="https://ucarecdn.com/f109e37e-91fa-42b6-b7c8-a5718a452bcf/-/preview/" width="100%"/><br/><br/>
 
 <img src="https://ucarecdn.com/e8ce3e5c-3d37-4e8d-ad8e-bdcbcca977f5/-/preview/" width="100%"/><br/><br/>
 <img src="https://ucarecdn.com/9e73481b-b967-4b26-825a-a8466c8a1dea/-/preview/" width="100%"/>
@@ -287,6 +287,13 @@ Samir Tendulkar owned and operated a e-commerce business from 2012 to 2016 which
 frameborder="0" allowfullscreen class="video"></iframe>
 </div>
 Covid-19 has made working from home a new normal. This will see a lot more people cooking at home. This presents a tremendous growth opportunity <br/><br/>
+
+<img src="https://ucarecdn.com/8aa8b32f-c01f-4436-894a-bab8a5c89710/-/preview/" width="100%"/><br/><br/>
+
+<div class="container">
+<iframe src="https://www.youtube.com/embed/Xs6c5cvvq84"
+frameborder="0" allowfullscreen class="video"></iframe>
+</div><br/><br/>
 
 
 <img src="https://ucarecdn.com/3ec27327-bad8-4ff8-bed7-9a87af94513d/-/preview/" width="100%"/><br/><br/>
