--- a/with_dividers.html
+++ b/with_dividers.html
@@ -295,6 +295,12 @@ Covid-19 has made working from home a new normal. This will see a lot more peopl
 frameborder="0" allowfullscreen class="video"></iframe>
 </div><br/><br/>
 
+<img src="https://ucarecdn.com/596c48b8-1871-4219-8c94-3e423610960c/-/preview/" width="100%"/><br/><br/>
+
+<div class="container">
+<iframe src="https://www.youtube.com/embed/Vcy7IcyIyuU"
+frameborder="0" allowfullscreen class="video"></iframe>
+</div><br/><br/>
 
 <img src="https://ucarecdn.com/3ec27327-bad8-4ff8-bed7-9a87af94513d/-/preview/" width="100%"/><br/><br/>
 
