--- a/with_dividers.html
+++ b/with_dividers.html
@@ -173,7 +173,19 @@ frameborder="0" allowfullscreen class="video"></iframe>
   </table>
   <table>
     
+     <tr>
+    <td><img src="https://media-exp1.licdn.com/dms/image/C4E03AQEchkZEksymwQ/profile-displayphoto-shrink_400_400/0?e=1605744000&v=beta&t=vVOIkHFsaTKnhqx4Fd_obiCQ73EH4eubRKhlag7D7fs" width="100px" align=”left” style="margin: 0px 10px 0px 0px; border-radius: 50%;" /></td>
+    <td><strong>Nikhil Tendulkar</strong> &nbsp &nbsp 
+    <a href="https://www.linkedin.com/in/nikhil-tendulkar-2531371b7/" style="font-size:24px" class="fa">&#xf08c;</a><br/>
+    <small>Chief Operating Officer</small>
+    
+    <ul>
+    	<li>Started a e-commerce Company in 2012 & took the business from 0 to $16 million in 4 years. 
+</li>
+	</ul>
    
+    </td>    
+  </tr> 
   
    <tr>
     <td><img src="https://dfon51l7zffjj.cloudfront.net/uploads/company_role/custom_photo/1099021/square_cropped_Mehmet.jpg" width="100px" align=”left” style="margin: 0px 10px 0px 0px; border-radius: 50%;" /></td>
@@ -326,7 +338,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
 
 <p><b>Why did you choose this idea? Why do you care?
 </b></p>
-<p>My dad loves to cook. I saw all the different things he cooked and how beautifully they turned out. He loved to have people over for dinner. They always complimented his cooking. I love to cook too and to invite people over. None of us are professional chefs. Many people love to show their cooking skills
+<p>My dad loves to cook. I saw all the different things he cooked and how beautifully they turned out. He loves to have people over for dinner. They always complimented his cooking. I love to cook too and to invite people over. None of us are professional chefs. Many people love to show their cooking skills
 
 We give them a platform to do so.</p><br/>
 
