--- a/with_dividers.html
+++ b/with_dividers.html
@@ -123,7 +123,7 @@ frameborder="0" allowfullscreen class="video"></iframe>
  </tr>
  <tr>
     <td><img src="https://dfon51l7zffjj.cloudfront.net/uploads/company_role/custom_photo/1065529/square_cropped_Larry_Fish.jpg" width="100px" align=”left” style="margin: 0px 10px 0px 0px; border-radius: 50%;" /></td>
-    <td><strong>Lawrence Page</strong>&nbsp &nbsp 
+    <td><strong>Lawrence Fish</strong>&nbsp &nbsp 
     <a href="https://www.linkedin.com/in/lawrence-fish-5478b82/" style="font-size:24px" class="fa">&#xf08c;</a><br/>
     <small>Chief Financial Officer</small>
     <ul>
