--- a/with_dividers.html
+++ b/with_dividers.html
@@ -316,8 +316,16 @@ frameborder="0" allowfullscreen class="video"></iframe>
 
 <img src="https://ucarecdn.com/3ec27327-bad8-4ff8-bed7-9a87af94513d/-/preview/" width="100%"/><br/><br/>
 
+<h3> We plan to raise around $250,000 from private investors and the remaining money on a regulation crowdfunding website called Wefunder.com</h3>
 
-<img src="https://ucarecdn.com/6c50c0c0-121e-4dec-9da1-57a36cf1e870/-/preview/" width="100%"/><br/><br/>
+<img src="https://ucarecdn.com/9445b234-6b90-4404-b31a-62c62ef0bb56/-/preview/" width="100%"/><br/><br/>
+
+<img src="https://ucarecdn.com/b9494e6f-0ad6-4456-9e03-1d0154a4d150/-/preview/" width="100%"/><br/><br/>
+
+<div class="container">
+<iframe src="https://www.youtube.com/embed/CT7QqpoRDIM"
+frameborder="0" allowfullscreen class="video"></iframe>
+</div><br/><br/>
 
 <img src="https://ucarecdn.com/404f763b-7fc2-470b-a617-c5eb7e17bc51/-/preview/" width="100%"/><br/><br/>
 
